--- a/style.css
+++ b/style.css
@@ -12,15 +12,12 @@
  * Base structure
  */
 
-body {
-}
-
 /*
  * Header
  */
 
 .banner-wrap {
-
+ 
   background-image: url(./assets/background\ img.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -59,3 +56,10 @@ body {
   color: #fff;
   border-bottom-color: #fff;
 }
+
+.scrolling {
+  background: black;
+  opacity: 80%;
+  transition: all 0.5s;
+}
+
